changed: early init of IDE runners